--- a/data/events.yml
+++ b/data/events.yml
@@ -1,3 +1,8 @@
+- 
+- title: Private Veranstaltung
+  location: Mannheim
+  date: "2021-10-02T18:30:00"
+
 - title: Hochstädter Haus
   location: Bensheim
   date: "2021-08-29T11:00:00"
