--- a/data/events.yml
+++ b/data/events.yml
@@ -1,6 +1,13 @@
+- title: Hamburger Tor
+  location: Worms
+  date: "2021-10-03T12:00:00"
+  description: >-
+    Wir spielen als Trio beim "Gabelfrühstück und Blau" im Hamburger Tor in Worms
+  url: http://hamburger-tor.de/2021/09/26/gabelfruehstueck-und-blau/
+  
 - title: Private Veranstaltung
   location: Mannheim
-  date: "2021-10-03T12:00:00"
+  date: "2021-10-02T12:00:00"
   
 - title: Hochstädter Haus
   location: Bensheim
