--- a/data/events.yml
+++ b/data/events.yml
@@ -1,3 +1,10 @@
+- title: Opener Gypsy Swing & Jazz Jam Session
+  location: Manhheim
+  date: "2022-02-17T20:00:00"
+  description: >-
+    Wir spielen als Session Opener von 20h-21h.
+  url: https://fb.me/e/6CTAO5y6K
+  
 - title: Hamburger Tor
   location: Worms
   date: "2021-10-03T12:00:00"
