--- a/data/events.yml
+++ b/data/events.yml
@@ -52,17 +52,12 @@
 
 - title: Wormser Kulturnacht
   location: Hamburger Tor, Worms
-  date: "2022-06-25T00:00:00"
-  note: >-
-    Mehr Informationen folgen!
+  date: "2022-06-25T19:00:00"
+  link: https://www.worms-erleben.de/erleben/erleben-und-feiern/veranstaltungskalender/veranstaltung.php?id=34l628b4267ea7866.73785710#blockContent
 
 - title: Private Veranstaltung
   location: Zwingenberg
   date: "2022-09-03T00:00:00"
-
-- title: Private Veranstaltung
-  location: Hirschberg
-  date: "2022-09-17T00:00:00"
 
 
 
