--- a/data/events.yml
+++ b/data/events.yml
@@ -59,6 +59,10 @@
   location: Zwingenberg
   date: "2022-09-03T00:00:00"
 
+- title: Lazy Sunday Afternoon
+  location: Hamburger Tor, Worms
+  date: "2022-10-09T16:00:00"
+
 
 
 
