--- a/data/events.yml
+++ b/data/events.yml
@@ -62,6 +62,7 @@
 - title: Lazy Sunday Afternoon
   location: Hamburger Tor, Worms
   date: "2022-10-09T16:00:00"
+  link: https://www.hamburger-tor.de/event/lazy-sunday-afternoon-2/
 
 
 
