--- a/data/events.yml
+++ b/data/events.yml
@@ -64,8 +64,9 @@
   date: "2022-10-09T16:00:00"
   link: https://www.hamburger-tor.de/event/lazy-sunday-afternoon-2/
 
-
-
-
-  
-  
+- title: Weihnachtsmarkt Worms
+  location: Römischer Kaiser, Worms
+  date: "2022-11-25T17:00:00"
+  note: >-
+    Wir spielen ganz als Duo/Trio bei der Wechselbude am Römischen
+    Kaiser für den Hamburger Tor e.V.
