--- a/data/events.yml
+++ b/data/events.yml
@@ -70,3 +70,11 @@
   note: >-
     Wir spielen ganz als Duo/Trio bei der Wechselbude am Römischen
     Kaiser für den Hamburger Tor e.V.
+
+- title: Musikalische Begleitung Rotaach-Preis-Verleihung
+  location: Hamburger Tor, Worms
+  date: "2023-03-25T19:00:00"
+  note: >-
+    Mehr Informationen folgen...
+
+    
