--- a/data/events.yml
+++ b/data/events.yml
@@ -5,31 +5,6 @@
     Wir spielen als Session Opener von 20h-21h.
   link: https://fb.me/e/6CTAO5y6K
   
-- title: Hamburger Tor
-  location: Worms
-  date: "2021-10-03T12:00:00"
-  note: >-
-    Wir spielen als Trio beim "Gabelfrühstück und Blau" im Hamburger Tor in Worms
-  link: http://hamburger-tor.de/2021/09/26/gabelfruehstueck-und-blau/
-  
-- title: Private Veranstaltung
-  location: Mannheim
-  date: "2021-10-02T18:30:00"
-  
-- title: Hochstädter Haus
-  location: Bensheim
-  date: "2021-08-29T11:00:00"
-  note: >-
-    Swing-Frühschoppen
-  link: https://hochstädter-haus.de/
-
-- title: Theater Mobile Sommerfest
-  location: Zwingenberg/Bergstr.
-  date: "2021-08-28T18:00:00"
-  note: >-
-    Um Anmeldung beim Theater Mobile wird gebeten. Siehe Link.
-  link: https://mobile-zwingenberg.de/
-
 - title: Lazy Sunday Afternoon
   location: Hamburger Tor, Worms
   date: "2022-05-01T15:00:00"
@@ -76,5 +51,16 @@
   date: "2023-03-25T19:00:00"
   note: >-
     Mehr Informationen folgen...
+
+- title: Musik am Gammi
+  location: Lutherplatz, Worms
+  date: "2023-05-13T11:00:00"
+
+- title: Konzert
+  location: Theater Mobile, Zwingenberg
+  date: "2023-11-11T20:00:00"
+  link: https://mobile-zwingenberg.de/event/hot-club-worms/
+
+
 
     
