--- a/data/events.yml
+++ b/data/events.yml
@@ -61,6 +61,11 @@
   note: >-
     Hot Club Worms Trio Live erleben.
 
+- title: Wormser Kulturnacht
+  location: Hamburger Tor, Worms
+  date: "2023-06-24T20:30:00"
+  link: https://www.worms-erleben.de/erleben/erleben-und-feiern/veranstaltungskalender/veranstaltung.php?id=vut644a889a2d2840.03445052#blockContentWorms
+
 - title: Konzert
   location: Theater Mobile, Zwingenberg
   date: "2023-11-11T20:00:00"
